runs/2026-03-09/20260309T141702-pmic-instrumentation-update/action.log
[2026-03-09T05:17:02Z] experiment: exp1 PMIC path instrumentation
[2026-03-09T05:17:02Z] doc: docs/pmic-followup-experiments.md
[2026-03-09T05:17:02Z] kernel tree: /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline
[2026-03-09T05:17:02Z] baseline profile: candidate
[2026-03-09T05:17:02Z] patch: /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/pmic-path-instrumentation-v1.patch
[2026-03-09T05:17:02Z] module release: 7.0.0-rc2-1-mainline-dirty
[2026-03-09T05:17:02Z] build jobs: 8
[2026-03-09T05:17:02Z] dry-run: 0
[2026-03-09T05:17:02Z] build directories:
[2026-03-09T05:17:02Z]   - drivers/platform/x86/intel/int3472
[2026-03-09T05:17:02Z]   - drivers/media/pci/intel
[2026-03-09T05:17:02Z]   - drivers/media/i2c
[2026-03-09T05:17:02Z]   - drivers/media/v4l2-core
[2026-03-09T05:17:02Z]   - drivers/clk
[2026-03-09T05:17:02Z]   - drivers/regulator
[2026-03-09T05:17:02Z] module installs:
[2026-03-09T05:17:02Z]   - drivers/platform/x86/intel/int3472/intel_skl_int3472_tps68470.ko:kernel/drivers/platform/x86/intel/int3472/intel_skl_int3472_tps68470.ko.zst
[2026-03-09T05:17:02Z]   - drivers/media/pci/intel/ipu-bridge.ko:kernel/drivers/media/pci/intel/ipu-bridge.ko.zst
[2026-03-09T05:17:02Z]   - drivers/media/i2c/ov5675.ko:kernel/drivers/media/i2c/ov5675.ko.zst
[2026-03-09T05:17:02Z]   - drivers/media/v4l2-core/videodev.ko:kernel/drivers/media/v4l2-core/videodev.ko.zst
[2026-03-09T05:17:02Z]   - drivers/clk/clk-tps68470.ko:kernel/drivers/clk/clk-tps68470.ko.zst
[2026-03-09T05:17:02Z]   - drivers/regulator/tps68470-regulator.ko:kernel/drivers/regulator/tps68470-regulator.ko.zst
[2026-03-09T05:17:02Z] CMD: git -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline status --short
 M drivers/media/i2c/ov5675.c
 M drivers/media/pci/intel/ipu-bridge.c
 M drivers/platform/x86/intel/int3472/tps68470_board_data.c
?? drivers/media/i2c/ov5675.c.orig
?? drivers/media/pci/intel/ipu-bridge.c.orig
?? localversion.10-pkgrel
?? localversion.20-pkgname
?? version
[2026-03-09T05:17:03Z] CMD: /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/scripts/patch-kernel.sh --kernel-tree /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline --profile candidate --status
note: kernel tree is already dirty; patch state will be checked file-by-file
Kernel tree: /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline
Profile: candidate

STATE        PATCH                        TIER       FILE
applied      ms13q3-board-data            tested     /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/ms13q3-int3472-tps68470-v1.patch
applied      ipu-bridge-ovti5675          tested     /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/ipu-bridge-ovti5675-v1.patch
applied      ov5675-serial-power-on       tested     /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/ov5675-serial-power-on-v1.patch
applied      ov5675-powerdown-followup    candidate  /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/ov5675-powerdown-followup-v1.patch
applied      ov5675-identify-debug        candidate  /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/ov5675-identify-debug-v1.patch
applied      ov5675-gpio-release-sequencing-debug candidate  /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/ov5675-gpio-release-sequencing-debug-v1.patch
[2026-03-09T05:17:15Z] CMD: /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/scripts/patch-kernel.sh --kernel-tree /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline --profile candidate
note: kernel tree is already dirty; patch state will be checked file-by-file
[skip]  ms13q3-board-data already applied
[skip]  ipu-bridge-ovti5675 already applied
[skip]  ov5675-serial-power-on already applied
[skip]  ov5675-powerdown-followup already applied
[skip]  ov5675-identify-debug already applied
[skip]  ov5675-gpio-release-sequencing-debug already applied

Applied: 0
Skipped: 6
Conflicts: 0
[2026-03-09T05:17:15Z] CMD: git -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline apply /home/lhl/github/lhl/msi-prestige13-a2vm-webcam/reference/patches/pmic-path-instrumentation-v1.patch
[2026-03-09T05:17:15Z] CMD: make -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline -j 8 M=drivers/platform/x86/intel/int3472 modules
make: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
make[1]: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/platform/x86/intel/int3472'
make[1]: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/platform/x86/intel/int3472'
make: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
[2026-03-09T05:17:16Z] CMD: make -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline -j 8 M=drivers/media/pci/intel modules
make: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
make[1]: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/media/pci/intel'
make[1]: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/media/pci/intel'
make: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
[2026-03-09T05:17:17Z] CMD: make -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline -j 8 M=drivers/media/i2c modules
make: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
make[1]: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/media/i2c'
make[1]: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/media/i2c'
make: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
[2026-03-09T05:17:19Z] CMD: make -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline -j 8 M=drivers/media/v4l2-core modules
make: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
make[1]: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/media/v4l2-core'
  CC [M]  v4l2-common.o
  LD [M]  videodev.o
  MODPOST Module.symvers
  CC [M]  videodev.mod.o
  LD [M]  videodev.ko
  BTF [M] videodev.ko
make[1]: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/media/v4l2-core'
make: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
[2026-03-09T05:17:22Z] CMD: make -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline -j 8 M=drivers/clk modules
make: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
make[1]: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/clk'
  CC [M]  clk-tps68470.o
  MODPOST Module.symvers
  CC [M]  clk-tps68470.mod.o
  LD [M]  clk-tps68470.ko
  BTF [M] clk-tps68470.ko
make[1]: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/clk'
make: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
[2026-03-09T05:17:24Z] CMD: make -C /home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline -j 8 M=drivers/regulator modules
make: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
make[1]: Entering directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/regulator'
  CC [M]  tps68470-regulator.o
tps68470-regulator.c: In function ‘tps68470_regulator_log_state’:
tps68470-regulator.c:66:9: error: implicit declaration of function ‘regmap_read’; did you mean ‘bitmap_read’? [-Wimplicit-function-declaration]
   66 |         regmap_read(data->regmap, TPS68470_REG_S_I2C_CTL, &s_i2c_ctl);
      |         ^~~~~~~~~~~
      |         bitmap_read
make[3]: *** [/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/scripts/Makefile.build:289: tps68470-regulator.o] Error 1
make[2]: *** [/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/Makefile:2101: .] Error 2
make[1]: *** [/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/Makefile:248: __sub-make] Error 2
make[1]: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline/drivers/regulator'
make: *** [Makefile:248: __sub-make] Error 2
make: Leaving directory '/home/lhl/.cache/paru/clone/linux-mainline/src/linux-mainline'
